--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "i": "^0.3.7",
-    "json-server": "^1.0.0-beta.0",
+    "json-server": "^0.17.4",
     "npm": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
